--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Jenly1314.GitHub.io</title>
-  <meta name="description" content="Jenly&#39;s Blog">
+  <meta name="description" content="Jenly&#39;s blog">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
