--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub Projects Grid</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <title>GitHub Projects</title>
   <style>
     body {
         font-family: Arial, sans-serif;
