--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -12,24 +12,25 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background-color: #f0f0f0;
+        background-color: #f9f9f9;
         margin: 0;
-        padding: 20px 0; /* 上下各添加 20px 边距 */
+        padding: 20px;
     }
     .grid-container {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
         gap: 20px;
-        width: 80%;
+        width: 90%;
+        max-width: 1200px;
     }
     .project-card {
         background: white;
-        border-radius: 12px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 16px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         overflow: hidden;
         text-align: center;
-        padding: 10px;
-        transition: transform 0.3s ease;
+        padding: 20px;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
         cursor: pointer;
         text-decoration: none;
         aspect-ratio: 1 / 1;
@@ -37,35 +38,61 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
+        max-height: 280px; /* Adjusted max-height for 5 lines of content */
     }
     .project-card:hover {
-        transform: scale(1.03);
+        transform: translateY(-5px);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
     }
     .project-card h3 {
-        font-size: 1.2em;
+        font-size: 1.4em;
         margin: 10px 0;
+        color: #0366d6;
+        cursor: pointer;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        transition: color 0.3s ease;
+        text-align: center; /* Ensure title is centered */
+    }
+    .project-card h3:hover {
+        color: #024b72;
+        white-space: normal; /* Show full title on hover */
+        overflow: visible;
+        text-overflow: clip;
     }
     .project-card p {
         color: #666;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 5; /* Limit to 5 lines */
+        -webkit-line-clamp: 5; /* Display up to 5 lines */
         overflow: hidden;
         text-overflow: ellipsis;
-        margin: 10px 15px; /* Add vertical and horizontal padding */
-        line-height: 1.5em; /* Adjust line-height to control space */
+        margin: 0 15px;
+        line-height: 1.4em;
+        max-height: 7em; /* Adjusted for 5 lines of content */
+        overflow: hidden; /* Hide overflow */
     }
     .project-card a {
-        color: #0366d6;
+        color: inherit;
         text-decoration: none;
     }
     .project-card a:hover {
         text-decoration: underline;
     }
+    .no-repos {
+        font-size: 1.2em;
+        color: #666;
+        text-align: center;
+        margin: 20px;
+    }
   </style>
 </head>
 <body>
-<div class="grid-container" id="projects-grid"></div>
+<div class="grid-container" id="projects-grid">
+  <div id="no-repos" class="no-repos" style="display: none;">No repositories found.</div>
+</div>
 
 <script>
   const username = 'jenly1314'; // Replace with the GitHub username
@@ -76,6 +103,9 @@
       let response;
       do {
           response = await fetch(url);
+          if (!response.ok) {
+              throw new Error('Network response was not ok');
+          }
           const data = await response.json();
           repos = repos.concat(data);
           url = response.headers.get('Link')?.includes('rel="next"') ? response.headers.get('Link').split(',')[0].match(/<(.*)>/)[1] : null;
@@ -88,19 +118,30 @@
           const filteredRepos = data.filter(repo => repo.stargazers_count >= 10);
           const sortedRepos = filteredRepos.sort((a, b) => b.stargazers_count - a.stargazers_count);
           const gridContainer = document.getElementById('projects-grid');
-          sortedRepos.forEach(repo => {
-              const card = document.createElement('a');
-              card.className = 'project-card';
-              card.href = repo.html_url;
-              card.target = '_blank';
-              card.innerHTML = `
-                  <h3>${repo.name}</h3>
-                  <p>${repo.description || 'No description available'}</p>
-              `;
-              gridContainer.appendChild(card);
-          });
+          const noRepos = document.getElementById('no-repos');
+
+          if (sortedRepos.length === 0) {
+              noRepos.style.display = 'block';
+          } else {
+              noRepos.style.display = 'none';
+              sortedRepos.forEach(repo => {
+                  const card = document.createElement('a');
+                  card.className = 'project-card';
+                  card.href = repo.html_url;
+                  card.target = '_blank';
+                  card.setAttribute('aria-label', `View ${repo.name} repository`);
+                  card.innerHTML = `
+                      <h3>${repo.name}</h3>
+                      <p>${repo.description || 'No description available'}</p>
+                  `;
+                  gridContainer.appendChild(card);
+              });
+          }
       })
-      .catch(error => console.error('Error fetching GitHub projects:', error));
+      .catch(error => {
+          console.error('Error fetching GitHub projects:', error);
+          document.getElementById('projects-grid').innerHTML = `<div class="no-repos">Error fetching projects. Please try again later.</div>`;
+      });
 </script>
 </body>
 </html>
